@@ -2393,7 +2393,7 @@
       "source_project_id": 5,
       "author_id": 1,
       "assignee_id": null,
-      "title": "Cannot be automatically merged",
+      "title": "MR1",
       "created_at": "2016-06-14T15:02:36.568Z",
       "updated_at": "2016-06-14T15:02:56.815Z",
       "state": "opened",
@@ -2827,10 +2827,10 @@
       "id": 26,
       "target_branch": "master",
       "source_branch": "feature",
-      "source_project_id": 5,
+      "source_project_id": 4,
       "author_id": 1,
       "assignee_id": null,
-      "title": "Can be automatically merged",
+      "title": "MR2",
       "created_at": "2016-06-14T15:02:36.418Z",
       "updated_at": "2016-06-14T15:02:57.013Z",
       "state": "opened",
