@@ -82,6 +82,7 @@ v 8.11.0 (unreleased)
   - Adds support for pending invitation project members importing projects
   - Update devise initializer to turn on changed password notification emails. !5648 (tombell)
   - Avoid to show the original password field when password is automatically set. !5712 (duduribeiro)
+  - Fix importing GitLab projects with an invalid MR source project
 
 v 8.10.5 (unreleased)
 
